# geometry-hierarchy-recovery

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTES.md  array_detector.py  claude_code_kickoff_prompt.md  hierarchy-recovery-proposal-v1.md  mixed-array-hierarchy-extraction-plan.md  repeat-cell-detection-proposal-v4.md  synthetic_layouts.py
cpp/: README.md
cpp/apps/: demo.cpp  dropoff_demo.cpp  erasure_demo.cpp  gds_recover.cpp  hr_demo.cpp  nested_demo.cpp  nonuniqueness_demo.cpp  unify_demo.cpp
cpp/include/adt/: bench.hpp  d4.hpp  detector.hpp  encoding.hpp  geometry.hpp  hierarchy.hpp  hr_svg.hpp  lattice.hpp  nested.hpp  reconcile.hpp  recover.hpp  runs.hpp  slab.hpp  svg.hpp  synthetic.hpp  synthetic_hier.hpp  types.hpp  verify.hpp
cpp/src/: bench.cpp  detector.cpp  encoding.cpp  hr_svg.cpp  lattice.cpp  nested.cpp  reconcile.cpp  recover.cpp  runs.cpp  slab.cpp  svg.cpp  synthetic.cpp  synthetic_hier.cpp  verify.cpp
cpp/tests/: test_bench.cpp  test_bugs.cpp  test_hierarchy.cpp  test_nested.cpp  test_unify.cpp
paper/: paper.md  paper.tex  preamble.tex
scripts/: build_paper.sh  crop_sram_layer.py  flatten_gds.py  gds_roundtrip.py
